# s12g

./: .gitignore  README.md  docker-compose.yml
services/backend/: Cargo.toml  Dockerfile  README.md  mix.exs
services/backend/core/: Cargo.toml
services/backend/lib/: backend.ex  main.ex
services/backend/mail/: Cargo.toml
services/backend/mail/src/: lib.rs
services/backend/main/: Cargo.toml
services/backend/main/src/: main.rs
services/backend/web/: Cargo.toml
services/backend/web/src/: api.rs  lib.rs  routes.rs  session.rs
services/backend/web/src/user/: user.rs
services/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
services/frontend/public/: manifest.json
services/frontend/src/: index.css
services/frontend/src/components/: AddPerson.js  AddPersonButton.js  AncestryTree.js  PersonCount.js
services/frontend/src/components/AddPerson/: AddPerson.js
services/frontend/src/components/AncestryTree/: AncestryTree.js  AncestryTree.module.css
services/frontend/src/components/FamilyNode/: FamilyNode.js  FamilyNode.module.css
services/frontend/src/components/InspectPerson/: InspectPerson.js  InspectPerson.module.css
services/frontend/src/data/: sampledata.json
services/frontend/src/reducers/: addPerson.js  numberOfPeople.js  persons.js  selectedPerson.js
services/frontend/src/reducers/persons/: addNodeAsChild.js  addNodeAsParent.js  addNodeAsPartner.js  addNodeAsSibling.js  persons.js  utils.js
services/frontend/src/views/: App.js
