[package]
name = "s12g-web"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.3.0"
time = "0.1.42"
s12g-mail = { path = "../mail" }

[dependencies.uuid]
version = "0.7"
default-features = false
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "uuid"]
